# OpenCoulomb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  coverage.json  pyproject.toml  task-planer.md
.github/workflows/: ci.yml
docs/architecture/: 01-introduction.md  02-constraints.md  03-context.md  04-solution-strategy.md  05-building-blocks.md  06-runtime-view.md  07-deployment.md  08-crosscutting.md  README.md
docs/architecture/09-decisions/: adr-001-pure-numpy-okada.md  adr-002-frozen-dataclasses.md  adr-003-state-machine-parser.md
docs/claude/architecture/: 00-architecture-index.md  architecture.md
docs/claude/design/: 00-design-index.md  program-specification.md
docs/claude/plan/: 00-plan-index.md  development-plan.md
docs/claude/research/: 00-research-index.md  coulomb-matlab-package-research.md  coulomb-matlab-research.md  research-summary.md
docs/review/: full-code-review-2026-02-27.md  phase-a-b-remediation-2026-02-27.md  phase-a-b-review-2026-02-27.md  phase-c-d-review-2026-02-27.md
docs/user/: README.md
docs/user/explanation/: okada-model.md  (+1 more)
llm-test-run/: Landers_uniform_slip.csv  Landers_uniform_slip_summary.txt
llm-test-run/v1/: Landers_uniform_slip_dcff.cou  Landers_uniform_slip_section.cou  report.md
llm-test-run/v2/: REPORT.md  run_full_demo.py  strikeslip.csv  strikeslip_dcff.cou  strikeslip_summary.txt  synthetic_catalog.csv  synthetic_gps.csv
src/opencoulomb/: __init__.py  __main__.py  _constants.py  exceptions.py
tests/: conftest.py
tests/integration/: test_coulomb34_compatibility.py  test_inp_parsing.py  test_pipeline.py
tests/performance/: test_benchmarks.py
tests/unit/: test_beachball.py  test_catalog.py  test_cli.py  test_coordinates.py  test_coulomb.py  test_cross_section.py  test_fsp_parser.py  test_gps.py  test_okada.py  test_oops.py  test_reference_validation.py  test_scaling.py  test_strain.py  test_stress.py  test_tapering.py  test_types.py  test_usgs_client.py  test_viz.py  test_volume.py  test_volume_viz.py  test_writers.py
tests/validation/: test_end_to_end.py
(+78 files in other folders)
